Added simple dev server to test in browser.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<title>PonyJS</title>
 	</head>
 	<body>
+		<div id="App"><!-- Vue app mount point --></div>
+		<script src="https://unpkg.com/vue@next"></script>
 		<script type="module" src="/src/main.js"></script>
 	</body>
 </html>
