--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 	<body>
 		<div id="App"><!-- Vue app mount point --></div>
 		<script src="https://unpkg.com/vue@next"></script>
-		<script type="module" src="/src/main.js"></script>
+		<script type="module" src="/example.js"></script>
 	</body>
 </html>
